Fix score alignment in popper

--- a/heatmap/heatmap3.css
+++ b/heatmap/heatmap3.css
@@ -91,7 +91,6 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	margin: 10px;
 	font-weight: bold;
 	font-size: 16px;
 }
